cmake_minimum_required(VERSION 3.15)

project(TonYogourt)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories(include) 

file(GLOB_RECURSE SOURCES src/*.cpp)

add_executable(TonYogourt ${SOURCES}
        include/stock/stock.h
        src/stock/Stock.cpp
        include/application/Application.h
        src/application/Application.cpp)
